# ibus-table-myanmar

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog.prev  Makefile.am  Makefile.in  NEWS  README  RELEASE-NOTES.txt  aclocal.m4  configure  configure.ac  replace
SPECS/: project.spec.in
debian/: changelog  control  copyright  files  ibus-table-burmese.install  ibus-table-zawgyi.install  rules  watch
debian/upstream/: metadata
icons/: Makefile.am
m4/: Makefile.am  Makefile.in
tables/: CMakeLists.txt  Makefile.am  zawgyi.txt
tables/burmese/: CMakeLists.txt  burmese.txt
tables/zawgyi/: CMakeLists.txt
